Fixed left/right cards on mobile

--- a/css/cardLayout/responsive.css
+++ b/css/cardLayout/responsive.css
@@ -44,12 +44,14 @@
         position: none;
         float: none;
         max-width: none;
+        box-sizing: content-box;
     }
 
     .card.right{
         position: none;
         float: none;
         max-width: none;
+        box-sizing: content-box;
     }
 
 
@@ -59,12 +61,14 @@
         position: none;
         float: none;
         max-width: none;
+        box-sizing: content-box;
     }
 
     .card.right{
         position: none;
         float: none;
         max-width: none;
+        box-sizing: content-box;
     }
 
 }
